syntax="proto3";
package pb;
option go_package = "/internal/service;service";

message RegisterReq {
  string email = 1;
  string password = 2;
  string username = 3;
}

message RegisterResp {
  int32 user_id = 1;
}

message LoginReq {
  string username= 1;
  string password = 2;
}

message LoginResp {
  string token = 1;
}


service UserService {
  rpc Register(RegisterReq) returns (RegisterResp) {
  }
  rpc Login(LoginReq) returns (LoginResp) {
  }
}